# detect-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  jaeger.sh  run.sh
infra/k8s/: api-deployment.yaml  ingress.yaml  jaeger.yaml  web-deployment.yaml
infra/k8s/detection/: Chart.yaml  values.yaml
infra/k8s/detection/templates/: api-deployment.yaml  ingress-jaeger.yaml  ingress-monitoring.yaml  ingress.yaml  web-deployment.yaml
infra/k8s/environments/dev/: values.yaml
infra/k8s/shared-charts/jaeger/: install.sh  values-jaeger.yaml
infra/k8s/shared-charts/otel/: install.sh  values-otel.yaml
infra/k8s/shared-charts/prometheus/: install.sh  upgrade.sh
model/: build_onnx.sh  model.py
src/: detector.rs  image.rs  lib.rs  main.rs
web/: Caddyfile  Dockerfile  package.json  pnpm-lock.yaml
web/src/: App.tsx
