[package]
name = "detect-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = [ "multipart" ] }
tokio = { version = "1.46.0", features = [ "full" ] }
ort = "=2.0.0-rc.10"
image = "0.25.6"
ndarray = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.6", features = [ "cors" ] }
bytes = "1.10.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
tracing-opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.30.0", features = [ "grpc-tonic" ] }
opentelemetry_sdk = { version = "0.30.0", features = [ "rt-tokio" ] }
opentelemetry = { version = "0.30.0" }
